--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node dist/index.js",
+    "build":"",
     "dev": "nodemon dist/index.js"
   },
   "author": "",
